# BDP2-HAAQ

./: .gitignore  DockerFile  DockerFile_data_fetch  DockerFile_nlp_pipeline  Jenkinsfile  Jenkinsfile_DataAcquisition_Docker  Jenkinsfile_collection_schedule  README.md  dvc.yaml  params.yaml  pod_data_fetch.yaml  pod_data_prepare.yaml  pyproject.toml  requirements.txt  twitter_collection.py  twitter_pipeline.py
.dvc/: config
data/: .gitignore  batch_tweets.csv.dvc  twitter_data.csv.dvc
dockerfolder/: Dockerfile  myPython.py
miscellaneous/: RNN_evaluation.py  miscellaneous_nlp_pipeline.ipynb  miscellaneous_twitter_api.py  miscellaneous_twitter_collection.ipynb  modelling.py  nlp_pipeline.py
src/: config.ini  evaluate.py  featurize.py  load_batch_tweets.py  prepare.py  real_time_twitter_collection.py  requirements.txt  train.py
